--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </div>
 
         <button class="btn-new"><i class="ion-ios-plus-outline"></i>New game</button>
+        <input type="text" name="" id="winnerScore" placeholder="select a winner score">
         <button class="btn-roll"><i class="ion-ios-loop"></i>Roll dice</button>
         <button class="btn-hold"><i class="ion-ios-download-outline"></i>Hold</button>
 
@@ -38,7 +39,8 @@
     </div>
 
     <!---    <script src="app.js"></script>--->
-    <script src="challenge1.js"></script>
+    <!---   <script src="challenge1.js"></script> -->
+    <script src="challenge2.js"></script>
 </body>
 
 </html>
